fix: Spacing for item detail

--- a/client/src/styles/pages/_item.scss
+++ b/client/src/styles/pages/_item.scss
@@ -136,6 +136,7 @@
     font-size: 17px;
     letter-spacing: 1px;
     text-align: left;
+    margin-bottom: 5em;
   }
 
   .ItemNotFound {
